@startuml
skinparam classAttributeIconSize 0

interface Item {
    +getName() : String
    +use(user : Player) : void
}

abstract class AbstractItem {
    -name : String
    -consumed : boolean
    +getName() : String
    +isConsumed() : boolean
    #markConsumed() : void
}

class Potion {
    +use(user : Player) : void
}

class PowerStone {
    +use(user : Player) : void
}

class SmokeBomb {
    +use(user : Player) : void
}

Item <|.. AbstractItem
AbstractItem <|-- Potion
AbstractItem <|-- PowerStone
AbstractItem <|-- SmokeBomb
@enduml
